Added content to test jump links.

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,11 @@
+body {
+  margin: 0;
+}
+
 .navbar {
-  background-color: rgb(26, 117, 138);
+  background-color: #008099;
   display: flex;
-  padding: 16px;
+  padding: 1rem;
   font-family: sans-serif;
   color: white;
 }
@@ -11,7 +15,7 @@
 }
 
 .navbar-link {
-  padding-right: 8px;
+  padding-right: .5rem;
 }
 
 .navbar-items-right {
@@ -20,6 +24,15 @@
 
 .navbar-link-toggle {
   display: none;
+}
+
+a, a:hover {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+button {
+  margin: .8rem;
 }
 
 @media (max-width: 768px) {
@@ -33,7 +46,7 @@
 
   .navbar-items-right {
     margin-left: 0;
-    /* display: none; */
+    display: none;
   }
   .navbar-link-toggle {
     align-self: flex-end;
@@ -43,5 +56,31 @@
   }
   .navbar-toggleShow {
     display: flex;
+  }
+  .navbar-link-open {
+    padding-top: 1rem;
+  }
+
+  h1 {
+    padding: 0.5em;
+    margin-top: 1rem;
+    color: #008099;
+  }
+  h2 {
+    padding-left: 1rem;
+  }
+ 
+  p {
+    font-size: 0.8rem;
+    line-height: 2;
+    padding: 1rem;
+  }
+  h3 {
+    color: #ffffff;
+    padding: 1rem;
+    text-align: center;
+  }
+  footer {
+    background-color: #008099;
   }
 }
